src/objects/EngagementLadderSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include_Membership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Membership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Opp_Rectypes__c</fullName>
        <inlineHelpText>semicolon-delimited list of Opp rectype names that should be considered</inlineHelpText>
        <label>Include Opp Rectypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Opps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>if checked, will consider opportunities as part of engagement rating</inlineHelpText>
        <label>Include Opps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_1_Color__c</fullName>
        <inlineHelpText>The color to be used in pyramid charts for level 1, as a hex value (do not include the #).  To match SF-generated charts, the same values need to be set for picklist values in Engagement Level and Engagement Level Peak fields in Contact.</inlineHelpText>
        <label>Level 1 Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_1_Name__c</fullName>
        <label>Level 1 Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2_Color__c</fullName>
        <label>Level 2 Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2_Name__c</fullName>
        <label>Level 2 Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_3_Color__c</fullName>
        <label>Level 3 Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_3_Name__c</fullName>
        <label>Level 3 Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Levels_Don_t_Require_Responded__c</fullName>
        <inlineHelpText>If any apply, enter as numbers separated by semi-colons,  (Most of the time, campaign mbrship will only count toward level if the mbrship is flagged as Responded.  However, for some (receiving newsletter) etc we want it to count even if not responded.)</inlineHelpText>
        <label>Levels Don&apos;t Require Responded</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Record_Types__c</fullName>
        <inlineHelpText>list of recordtype names, separated by commas, that count as memberships for the sake of calculating engagement levels</inlineHelpText>
        <label>Membership Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Member_Level__c</fullName>
        <inlineHelpText>level assigned to new members</inlineHelpText>
        <label>New Member Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_Default_Duration__c</fullName>
        <inlineHelpText>in months</inlineHelpText>
        <label>Override Default Duration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewing_Member_Level__c</fullName>
        <inlineHelpText>Level assigned to renewing or returning members</inlineHelpText>
        <label>Renewing Member Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Testing_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>if checked, will only operate on contacts that include the string &apos;testeng&apos; in the Title field.  Otherwise will operate on all contacts</inlineHelpText>
        <label>Testing Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timeframe_Medium__c</fullName>
        <inlineHelpText>number of months to go back for moderately-recent activity</inlineHelpText>
        <label>Timeframe Medium</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timeframe_Recent__c</fullName>
        <inlineHelpText>number of months to go back for recent activity</inlineHelpText>
        <label>Timeframe Recent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Engagement Tracker Settings</label>
</CustomObject>